--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,9 +3,7 @@
 @{
     ViewData["Title"] = "Home Page";
 }
-<div class="text-center">
-    <h1 class="display-4"><strong>Pizzaria</strong></h1>
-</div>
+
 <div class="text-center subtitle">
     <p>Pizzas salgadas</p>
 </div>
@@ -69,42 +67,48 @@
         </div>
     </div>
 </div>
+<br />
+<br />
+<br />
 
-<section class="slider_container">
-    <div class="container">
-        <div class="swiper card_slider">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                    <div class="card" style="width: 15rem;">
-                        <img src="https://guiadacozinha.com.br/wp-content/uploads/2019/10/pizza-prestigio-14772.jpg" class="card-img-top" alt="prestígio">
-                        <div class="card-body">
-                            <h5 class="card-title">Pizza prestígio</h5>
-                            <p class="card-text">Prestígio</p>
-                            <a href="#" class="btn btn-primary">Comprar</a>
-                        </div>
-                    </div>
-
-                    <div class="card" style="width: 15rem;">
-                        <img src="https://res.cloudinary.com/mrancho/w_1560,h_1170,c_fit/cardapio/2016/10/pizza-chocolate-banana.jpg" class="card-img-top" alt="banana com chocolate">
-                        <div class="card-body">
-                            <h5 class="card-title">Pizza banana com chocolate</h5>
-                            <p class="card-text">Banana com chocolate</p>
-                            <a href="#" class="btn btn-primary">Comprar</a>
-                        </div>
-                    </div>
-
-                    <div class="card" style="width: 15rem;">
-                        <img src="https://www.pizzatec.com.br/assets/uploads/images/2018/10/pizza-de-sorvete.jpg" class="card-img-top" alt="sorvete">
-                        <div class="card-body">
-                            <h5 class="card-title">Pizza de sorvete</h5>
-                            <p class="card-text">Pizza de sorvete</p>
-                            <a href="#" class="btn btn-primary">Comprar</a>
-                        </div>
-                    </div>
-
-                </div>
-
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img class="d-block w-100" src="https://www.pizzatec.com.br/assets/uploads/images/2018/10/pizza-de-sorvete.jpg" alt="First slide">
+            <div class="carousel-caption d-none d-md-block text-white bg-dark">
+                <h5>Pizza de sorvete</h5>
+                <p>Alterar box de fundo</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="https://res.cloudinary.com/mrancho/w_1560,h_1170,c_fit/cardapio/2016/10/pizza-chocolate-banana.jpg" alt="Second slide">
+            <div class="carousel-caption d-none d-md-block text-white bg-dark">
+                <h5>Pizza de chocolate com banana</h5>
+                <p>Alterar box de fund</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="https://guiadacozinha.com.br/wp-content/uploads/2019/10/pizza-prestigio-14772.jpg" alt="Third slide">
+            <div class="carousel-caption d-none d-md-block text-white bg-dark">
+                <h5>Pizza de prestígio</h5>
+                <p>Alterar box de fundo</p>
             </div>
         </div>
     </div>
-</section>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Anterior</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Próximo</span>
+    </a>
+</div>
+<br />
+<br />
+<br />
