--- a/Views/Shared/_Layout.cshtml.css
+++ b/Views/Shared/_Layout.cshtml.css
@@ -2,9 +2,15 @@
 for details on configuring this project to bundle and minify static web assets. */
 
 nav {
-    background-color: #e12301 !important;
+    background: rgb(219,162,74);
+    background: linear-gradient(180deg, rgba(219,162,74,1) 22%, rgba(255,250,138,1) 100%);
+    !important;
 }
 
+.navbar-brand {
+    color: #ce0000 !important;
+    font-family: 'Great Vibes', cursive !important;
+}
 .bar-brand {
     white-space: normal;
     text-align: center;
@@ -14,7 +20,11 @@ nav {
 a {
   color: #0077cc;
 }
+header div ul li:hover {
+    background-color: rgba(244, 239, 242, 0.3);
+    border-radius: 1rem;
 
+}
 .btn-primary {
   color: #fff;
   background-color: #1b6ec2;
@@ -43,18 +53,56 @@ button.accept-policy {
   line-height: inherit;
 }
 
+
+
+@media (orientation: landscape) {
+    .banner {
+        background-image: url("../Images/pizza_banner.jpg");
+        height: 25rem;
+        text-align: center;
+        box-shadow: 0.3rem 0.3rem 0.4rem #CBCED6, -0.3rem -0.3rem 0.4rem white;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+
+}
+
+@media (orientation: portrait) {
+    .banner {
+        background-image: url("../Images/pizza_banner_mobile.jpg");
+        height: 15rem;
+        text-align: center;
+        box-shadow: 0.3rem 0.3rem 0.4rem #CBCED6, -0.3rem -0.3rem 0.4rem white;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
+    
+
+
 footer {
     position: absolute;
     bottom: 0;
     width: 100%;
     white-space: nowrap;
     line-height: 60px;
-    background-color: #ce0000;
+    background: rgb(219,162,74);
+    background: linear-gradient(180deg, rgba(219,162,74,1) 22%, rgba(255,250,138,1) 100%);
 }
     footer span{
         text-align: center;
         justify-content: center;
         display: flex;
         font-size: 0.7rem;
-        color:white;      
+        color:black;
+        font-weight: 600;
     }
