--- a/Views/Shared/_Layout.cshtml.css
+++ b/Views/Shared/_Layout.cshtml.css
@@ -67,6 +67,7 @@ button.accept-policy {
         display: flex;
         justify-content: center;
         align-items: center;
+        margin-bottom: 2rem;
     }
 
 
@@ -84,17 +85,17 @@ button.accept-policy {
         display: flex;
         justify-content: center;
         align-items: center;
+        margin-bottom: 2rem;
     }
 }
-    
+
 
 
 footer {
-    position: absolute;
-    bottom: 0;
+    position: static;
     width: 100%;
-    white-space: nowrap;
-    line-height: 60px;
+    bottom: 0;
+    height: 4rem;
     background: rgb(219,162,74);
     background: linear-gradient(180deg, rgba(219,162,74,1) 22%, rgba(255,250,138,1) 100%);
 }
