--- a/Views/Pizza/Index.cshtml
+++ b/Views/Pizza/Index.cshtml
@@ -3,6 +3,20 @@
 @{
     ViewData["Title"] = "Listagem de pizzas";
 }
+@if (TempData["SucessMessage"] != null)
+{
+    <div class="alert alert-success" role="alert">
+        <button type="button" class="btn btn-danger btn-sm btn-close" arial-label="Close"></button>
+        @TempData["SucessMessage"]
+    </div>
+}
+@if (TempData["ErrorMessage"] != null)
+{
+    <div class="alert alert-danger" role="alert">
+        <button type="button" class="btn btn-danger btn-sm btn-close" arial-label="Close"></button>
+        @TempData["ErrorMessage"]
+    </div>
+}
 <div class="text-center subtitle">
     <p>Pizzas salgadas</p>
 </div>
