Tela de login e função de login funcionando. Função editar celular não está funcionando. Verificar o problema

--- a/Views/Pizza/Index.cshtml
+++ b/Views/Pizza/Index.cshtml
@@ -29,6 +29,7 @@
                 <img src="@pizzaSalgada.PizzaImg" class="card-img-top" alt="sabor pizza">
                 <div class="card-body">
                     <h5 class="card-title">@pizzaSalgada.PizzaFlavor</h5>
+                    <span class="card-text">Tamanho: @pizzaSalgada.SizeEnum</span>
                     <p class="card-text">R$ @pizzaSalgada.Price</p>
                 </div>
                 <div style="display: flex; flex-direction: row;">
