--- a/Views/Pizza/Update.cshtml
+++ b/Views/Pizza/Update.cshtml
@@ -27,7 +27,7 @@
     </select>
     <div class="mb-3">
         <label for="price" class="form-label">Preço</label>
-        <input type="number" asp-for="Price" class="form-control">
+        <input type="text" asp-for="Price" class="form-control">
     </div>
     <button type="submit" class="btn btn-primary">Alterar</button>
 
