--- a/Views/User/Index.cshtml
+++ b/Views/User/Index.cshtml
@@ -25,6 +25,9 @@
                 <th scope="col">ID</th>
                 <th scope="col">Nome</th>
                 <th scope="col">Email</th>
+                <th scope="col">Celular</th>
+                <th scope="col">Data de criação</th>
+                <th scope="col">Data edição</th>
                 <th scope="col"></th>
             </tr>
         </thead>
@@ -37,6 +40,9 @@
                         <th scope="row">@user.Id</th>
                         <td>@user.Name</td>
                         <td>@user.Email</td>
+                        <td>@user.Phone</td>
+                        <td>@user.RegisterDate</td>
+                        <td>@user.EditDate</td>
                         <td>
                             <div class="btn-group" role="group">
                                 <a role="button" class="btn btn-primary" asp-route-id="@user.Id" asp-controller="User" asp-action="Update">Alterar</a>
