corrigido bug de não atualizar celular

--- a/Views/Home/Welcome.cshtml
+++ b/Views/Home/Welcome.cshtml
@@ -13,6 +13,6 @@
 
 <script>
     setTimeout(function () {
-        window.location.href = '/Home/Index'; // Redireciona para a rota controlada pelo HomeController
+        window.location.href = '/Login/Index'; // Redireciona para a rota controlada pelo HomeController
     }, 3000);
 </script>
