--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -25,4 +25,5 @@
         @Html.ValidationMessageFor(x => x.Password)
     </div>
     <button type="submit" class="btn btn-primary">Entrar</button>
+    <p>Não tem uma conta? Registre-se <a href="/User/Create">aqui</a></p>
 </form>
