--- a/Views/User/Create.cshtml
+++ b/Views/User/Create.cshtml
@@ -1,4 +1,5 @@
 ﻿@model UserModel;
+@using Pizzaria.Enums;
 @{
     ViewData["Title"] = "Cadastrar usuário";
 }
@@ -9,6 +10,14 @@
         <label for="UserName" class="form-label">Nome completo</label>
         <input type="text" asp-for="Name" class="form-control" placeholder="Digite seu nome completo">
         @Html.ValidationMessageFor(x => x.Name)
+    </div>
+    <div class="mb-3">
+        <select class="form-select w-25" asp-for="AdminEnum">
+            <option selected>Selecione o perfil do usuário</option>
+            <option value="@AdminEnum.Admin">Administrador</option>
+            <option value="@AdminEnum.Standard">Padrão</option>
+        </select>
+        @Html.ValidationMessageFor(x => x.AdminEnum)
     </div>
     <div class="mb-3">
         <label for="Email" class="form-label"> E-mail </label>
