--- a/Views/User/Index.cshtml
+++ b/Views/User/Index.cshtml
@@ -23,6 +23,7 @@
         <thead class="thead-dark">
             <tr>
                 <th scope="col">ID</th>
+                <th scope="col">Admin?</th>
                 <th scope="col">Nome</th>
                 <th scope="col">Email</th>
                 <th scope="col">Celular</th>
@@ -38,6 +39,7 @@
                 {
                     <tr>
                         <th scope="row">@user.Id</th>
+                        <td>@user.AdminEnum</td>
                         <td>@user.Name</td>
                         <td>@user.Email</td>
                         <td>@user.Phone</td>
