--- a/Views/Shared/Components/Menu/Default.cshtml
+++ b/Views/Shared/Components/Menu/Default.cshtml
@@ -11,9 +11,14 @@
         <li class="nav-item text-dark">
             Olá, @Model.Name
         </li>
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="" asp-controller="Pizza" asp-action="Create">Cadastrar pizza</a>
-        </li>
+        
+        @if (Model.AdminEnum == Pizzaria.Enums.AdminEnum.Admin)
+        {
+            <li class="nav-item">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Pizza" asp-action="Create">Cadastrar pizza</a>
+            </li>
+        }
+
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="" asp-controller="Pizza" asp-action="Index">Ver pizzas</a>
         </li>
