--- a/Views/Restrict/Index.cshtml
+++ b/Views/Restrict/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    Layout = "_LayoutUnlogged";
+    Layout = "_LayoutNotLogged";
     ViewData["Title"] = "Página restrita";
 }
 <h1>Error!</h1>
