--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
 ﻿<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
+@model List<PizzaModel>
+@using Pizzaria.Enums;
 
 @{
     ViewData["Title"] = "Home Page";
@@ -7,68 +9,65 @@
 <div class="text-center subtitle">
     <p>Pizzas salgadas</p>
 </div>
-<div class="row">
-    <div class="card" style="width: 15rem;">
-        <img src="https://www.sabornamesa.com.br/media/k2/items/cache/513d7a0ab11e38f7bd117d760146fed3_XL.jpg" class="card-img-top" alt="calabresa">
-        <div class="card-body">
-            <h5 class="card-title">Pizza calabresa</h5>
-            <p class="card-text">Calabresa</p>
-            <a href="#" class="btn btn-primary">Comprar</a>
-        </div>
+@if (Model != null)
+{
+    <div class="row">
+        @foreach (var pizzaSalgada in Model)
+        {
+            @if (pizzaSalgada.SaltySweetEnum == Pizzaria.Enums.SaltySweetEnum.Salgada)
+            {
+                <div class="card" style="width: 18rem;" @pizzaSalgada.Id>
+                    <img src="@pizzaSalgada.PizzaImg" class="card-img-top" alt="sabor pizza">
+                    <div class="card-body">
+                        <h5 class="card-title">@pizzaSalgada.PizzaFlavor</h5>
+                        <span class="card-text">Tamanho: @pizzaSalgada.SizeEnum</span>
+                        <p class="card-text">R$ @pizzaSalgada.Price</p>
+                    </div>
+                    <div style="display: flex; flex-direction: row;">
+                        <a href="#" class="btn btn-primary">Comprar</a>
+                    </div>
+                </div>
+            }
+        }
     </div>
-    <div class="card" style="width: 15rem;">
-        <img src="https://res.cloudinary.com/mrancho/cardapio/2016/06/pizza-portuguesa_min.jpg" class="card-img-top" alt="portuguesa">
-        <div class="card-body">
-            <h5 class="card-title">Pizza portuguesa</h5>
-            <p class="card-text">Portuguesa</p>
-            <a href="#" class="btn btn-primary">Comprar</a>
-        </div>
-    </div>
-
-    <div class="card" style="width: 15rem;">
-        <img src="https://www.sabornamesa.com.br/media/k2/items/cache/32699af76cfc6e0191d612ffd4e88ee9_XL.jpg" class="card-img-top" alt="quatro queijos">
-        <div class="card-body">
-            <h5 class="card-title">Pizza 4 queijos</h5>
-            <p class="card-text">4 queijos</p>
-            <a href="#" class="btn btn-primary">Comprar</a>
-        </div>
-    </div>
-</div>
+}
+else
+{
+    <p>Não há pizzas para serem exibidas no momento.</p>
+}
 
 <div class="text-center subtitle">
     <p>Pizzas doces</p>
 </div>
-<div class="row">
-    <div class="card" style="width: 15rem;">
-        <img src="https://guiadacozinha.com.br/wp-content/uploads/2019/10/pizza-prestigio-14772.jpg" class="card-img-top" alt="prestígio">
-        <div class="card-body">
-            <h5 class="card-title">Pizza prestígio</h5>
-            <p class="card-text">Prestígio</p>
-            <a href="#" class="btn btn-primary">Comprar</a>
-        </div>
-    </div>
 
-    <div class="card" style="width: 15rem;">
-        <img src="https://res.cloudinary.com/mrancho/w_1560,h_1170,c_fit/cardapio/2016/10/pizza-chocolate-banana.jpg" class="card-img-top" alt="banana com chocolate">
-        <div class="card-body">
-            <h5 class="card-title">Pizza banana com chocolate</h5>
-            <p class="card-text">Banana com chocolate</p>
-            <a href="#" class="btn btn-primary">Comprar</a>
-        </div>
+@if (Model != null)
+{
+    <div class="row">
+        @foreach (var pizzaDoce in Model)
+        {
+            @if (pizzaDoce.SaltySweetEnum == Pizzaria.Enums.SaltySweetEnum.Doce)
+            {
+                <div class="card" style="width: 18rem;" @pizzaDoce.Id>
+                    <img src="@pizzaDoce.PizzaImg" class="card-img-top" alt="sabor pizza">
+                    <div class="card-body">
+                        <h5 class="card-title">@pizzaDoce.PizzaFlavor</h5>
+                        <span class="card-text">Tamanho: @pizzaDoce.SizeEnum</span>
+                        <p class="card-text">R$ @pizzaDoce.Price</p>
+                    </div>
+                    <div style="display: flex; flex-direction: row;">
+                        <a href="#" class="btn btn-primary">Comprar</a>
+                    </div>
+                </div>
+            }
+        }
     </div>
+}
+else
+{
+    <p>Não há pizzas para serem exibidas no momento.</p>
+}
 
-    <div class="card" style="width: 15rem;">
-        <img src="https://www.pizzatec.com.br/assets/uploads/images/2018/10/pizza-de-sorvete.jpg" class="card-img-top" alt="sorvete">
-        <div class="card-body">
-            <h5 class="card-title">Pizza de sorvete</h5>
-            <p class="card-text">Pizza de sorvete</p>
-            <a href="#" class="btn btn-primary">Comprar</a>
-        </div>
-    </div>
-</div>
-<br />
-<br />
-<br />
+
 
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
