--- a/Views/Restrict/Index.cshtml
+++ b/Views/Restrict/Index.cshtml
@@ -1,6 +1,5 @@
 ﻿@{
-    Layout = "_LayoutNotLogged";
     ViewData["Title"] = "Página restrita";
 }
-<h1>Error!</h1>
-<p>Você não tem permissão para acessar essa página.<a asp-asp-controller="Home" asp-action="Index">Clique aqui</a> para voltar para a home.</p>
+<h1>Ops!</h1>
+<p>Você não tem permissão para acessar essa página.<a asp-controller="Home" asp-action="Index">Clique aqui</a> para voltar para a home.</p>
