--- a/Views/Shared/Components/Menu/Default.cshtml
+++ b/Views/Shared/Components/Menu/Default.cshtml
@@ -22,14 +22,16 @@
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="" asp-controller="Pizza" asp-action="Index">Ver pizzas</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Create">Cadastrar usuário</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">Ver usuários</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="LogOut">Sair</a>
-        </li>
+        @if (Model.AdminEnum == Pizzaria.Enums.AdminEnum.Admin)
+        {
+            <li class="nav-item">
+                <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Create">Cadastrar usuário</a>
+            </li>
+        } 
+
     </ul>
+    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+        <a role="button" class="nav-link text-dark btn-primary" asp-area="" asp-controller="Home" asp-route-id="@Model.Id" asp-action="Update">Atualizar conta</a>
+        <a role="button" class="nav-link text-dark btn-danger" asp-area="" asp-controller="Login" asp-action="LogOut">Sair</a>
+    </div>
 </div>
