--- a/Views/Shared/Components/Menu/_LayoutUserSessionNull.cshtml
+++ b/Views/Shared/Components/Menu/_LayoutUserSessionNull.cshtml
@@ -7,20 +7,14 @@
 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
     <ul class="navbar-nav flex-grow-1">
      
-
-      
-
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="" asp-controller="Pizza" asp-action="Index">Ver pizzas</a>
+            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Create">Cadastrar usuário</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">Ver usuários</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Index">Entrar</a>
-        </li>
+        
+             
     </ul>
+    <div class="d-grid gap-2 d-md-flex justify-content-md-end">       
+        <a role="button" class="nav-link text-dark btn-primary" asp-area="" asp-controller="Home" asp-action="Create">Cadastre-se</a>             
+        <a role="button" class="nav-link text-dark btn-success" asp-area="" asp-controller="Login" asp-action="Index">Entrar</a>        
+    </div>
 </div>
