--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Pizzaria.styles.css" asp-append-version="true" />
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel='stylesheet'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
@@ -16,11 +17,11 @@
                @await Component.InvokeAsync("Menu")
             </div>
         </nav>
-        <div class="banner">
+       <!-- <div class="banner">
             <div class="index-title" id="text-appears">
                 <h1 class="index-title"><img src="~/Images/pizza-welcome-view.png" />Pizzaria<img src="~/Images/pizza-welcome-view.png" /></h1>
             </div>
-        </div>
+         </div> -->
     </header>
     <div class="container">
         <main role="main" class="pb-3">
