--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -20,36 +20,11 @@ html {
 
 body {
     overflow-x: hidden;
-    background-color: #F9F9FB;
+    background-color: #F8F8F8;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
 }
-
-.welcome-text {
-    font-size: 15rem;
-    margin: 0;
-    font-family: 'Great Vibes', cursive;
-    color: #ce0000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-    .welcome-text h1 {
-        margin: 0;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-    }
-    .welcome-text img {
-        display: flex;
-        flex-direction: row;
-        width: 12rem;
-        height: 12rem;
-        padding: 2rem;
-    }
 
 
 /*Appearing and disappearing text*/
@@ -100,11 +75,13 @@ body {
     font-weight: 500;
 }
 
-.card img{
-    width: 210px;
-    height: 150px;
-}
 
+
+.form-pos {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 50%);
+}
 @media (orientation: landscape) {
     .index-title {
         font-family: 'Great Vibes', cursive;
@@ -132,31 +109,6 @@ body {
 
 }
     @media (orientation: portrait) {
-        .welcome-text {
-            font-size: 5rem;
-            margin: 0;
-            font-family: 'Great Vibes', cursive;
-            color: #ce0000;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-            .welcome-text h1 {
-                margin: 0;
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%);
-            }
-
-            .welcome-text img {
-                display: flex;
-                flex-direction: row;
-                width: 3rem;
-                height: 3rem;
-                padding: 0.5rem;
-            }
 
         .index-title {
             font-family: 'Great Vibes', cursive;
@@ -193,3 +145,106 @@ body {
     top: -0.5rem;
     border-radius: 50% !important;
 }
+
+/*Login view*/
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+#login-body {
+    background: url('../Images/pizza_background2.jpg') no-repeat;
+    background-size: cover;
+    background-position: center;
+    min-height: 100vh;
+}
+
+.login-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+.login-wrapper {
+    width: 420px;
+    background: transparent;
+    border: 2px solid rgba(255, 255, 255, .2);
+    backdrop-filter: blur(20px);
+    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+    color: #fff;
+    border-radius: 10px;
+    padding: 30px 40px;
+   
+}
+
+    .login-wrapper h1{
+        font-size: 36px;
+        text-align: center;
+    }
+
+    .login-wrapper .input-box{
+        position: relative;
+        width: 100%;
+        height: 50px;
+        margin: 30px 0;
+    }
+
+    .input-box input{
+        width: 100%;
+        height: 100%;
+        background: transparent;
+        border: none;
+        outline: none;
+        border: 2px solid rgba(255, 255, 255, .2);
+        border-radius: 40px;
+        font-size: 16px;
+        color: #fff;
+        padding: 20px 45px 20px 20px;
+    }
+
+    .input-box input::placeholder{
+        color: #fff;
+
+    }
+    .input-box i{
+        position: absolute;
+        right: 20px;
+        top: 50%;
+        transform: translateY(-50%);
+        font-size: 20px;
+    }
+    
+    .login-wrapper .btn {
+        width: 100%;
+        height: 45px;
+        background: #fff;
+        border: none;
+        outline: none;
+        border-radius: 40px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+        font-size: 16px;
+        color: #333;
+        font-weight: 600;
+    }
+
+    .login-wrapper .register-link{
+        font-size: 14.5px;
+        text-align: center;
+        margin: 20px 0 15px;
+    }
+    
+    .register-link p a {
+        color: #fff;
+        text-decoration: none;
+        font-weight: 600;
+
+    }
+        .register-link p a:hover{
+            text-decoration: underline;
+        } 
